[tool.poetry]
name = "pothole-detector"
version = "0.1.0"
description = ""
authors = ["abatedemey <abatedemey@gmail.com>"]
readme = "README.md"
packages = [{include = "pothole_detector"}]

[tool.poetry.dependencies]
python = "^3.10"
gradio = "^3.23.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
